[package]
name = "exec"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6.18"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.99"
tokio = { version = "1.0", features = ["full"] }

[dependencies.tower]
version = "0.4"
features = [ "full" ]

[dependencies.tower-http]
version = "0.4"
features = [ "full" ]